--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -19,7 +19,7 @@
   height: auto;
   /* sticky footer fix end */
 
-  margin-top: 3em;
+  margin-top: 1em;
 
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
@@ -31,9 +31,9 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1em;
+    margin-top: 0.5em;
     max-width: 100%;
-    padding: 0 1em 1em;
+    padding: 0 0.5em 0.5em;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
@@ -59,7 +59,9 @@
 
 .page__footer-copyright {
   font-family: $global-font-family;
-  font-size: $type-size-7;
+  font-size: 0.85em;
+  line-height: 1.2;
+  padding: 0.2em 0;
 }
 
 .page__footer-follow {
@@ -71,20 +73,20 @@
 
   li {
     display: inline-block;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     font-family: $sans-serif-narrow;
-    font-size: $type-size-6;
+    font-size: 0.9em;
     text-transform: uppercase;
   }
 
   li + li:before {
     content: "";
-    padding-right: 5px;
+    padding-right: 3px;
   }
 
   a {
-    padding-right: 10px;
+    padding-right: 6px;
     font-weight: bold;
   }
 
